Fix unsigned int underflow bug in FileReader.

The underflow happens when reporting amount of external memory to V8:
AdjustReportedMemoryUsageToV8(-1 * raw_data_->ByteLength());

since ByteLength is unsigned, the -1 is cast to unsigned, which results
in V8 getting reports of ~4GB allocations. This confuses V8 GC and leads
to GC trashing.

BUG=chromium:736861,chromium:114548

Change-Id: Iba51aecf37ca9f8f009f369e952ea1ae509fe4cc
Reviewed-on: https://chromium-review.googlesource.com/550215
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Ulan Degenbaev <ulan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#482928}
Former-commit-id: 453c124756ed4016b892acabd37828bbfedf892c